# [#19707] Fixed lots of spacing issues, general cleanup, removed old inline styles, cleaned up download page, search page
git-svn-id: file:///Users/oratzes/svn/kunena@3704 daf2aa89-cb5b-0410-b8ee-fe93ebc9b27d

--- a/trunk/kunena.com/template/kunena_j15/css/kunena.css
+++ b/trunk/kunena.com/template/kunena_j15/css/kunena.css
@@ -3,9 +3,10 @@ table {border-collapse:collapse;border-spacing:0;}
 
 /* Main Layout */
 html {height:100%;margin-bottom:1px;}
-body {font:62.5%/1.2 Helvetica, Arial, sans-serif;color:#555;}
-h1,h2,h3,h4,.componentheading {font-weight:bold;margin:2em 0 1em;}
+body {font:62.5%/1.2 Helvetica, Arial, sans-serif;color:#555;margin-bottom: 30px;}
+h1,h2,h3,h4,.componentheading {font-weight:bold;margin:1em 0 1em;}
 h1,.componentheading {font-size:180%;}
+h2.contentheading {margin:1em 0 1em;}
 h2 {font-size:150%;}
 h3 {font-size:130%;}
 h4 {font-size:110%;}
@@ -16,8 +17,9 @@ p {margin-top:10px;margin-bottom:10px;}
 #main {font-size:1.3em;line-height:140%;}
 .background {position:absolute;width:100%;height:130px;background:url(../images/kunena.png) 0 -384px repeat-x;}
 #main .foreground, #message, #showcase, .leading, #page {position:relative;}
+span.leading_separator { display:block; height: 1px; clear:both;}
 #message, #showcase {z-index:0;}
-#main-content {border-bottom:1px solid #ddd;}
+#main-content {border:1px solid #ddd;}
 .dp20,.dp25,.dp33,.dp50,.dp100 {float:left;margin-top:15px;}
 .dp20 {width:20%;}
 .dp25 {width:25%;}
@@ -55,10 +57,10 @@ p {margin-top:10px;margin-bottom:10px;}
 #logo {width:288px;height:58px;background:url(../images/kunena.png) 0 -272px no-repeat;display:block;margin:20px 15px;}
 #header {overflow:hidden;}
 #header li {list-style:none;float:left;padding-left:15px;font-weight:bold;}
-#nav {height:34px;background:#888;z-index:1;position:relative;}
+#nav {height:34px;background:#737373;z-index:1;position:relative;}
 #nav ul {margin:0 0 0 15px;}
 #nav li {list-style:none;float:left;padding-left:3px;height:34px;position:relative;}
-#nav li a {display:block;padding:0 10px;line-height:30px;color:#fff;font-weight:bold;}
+#nav li a {display:block;padding:0 10px;line-height:33px;color:#fff;font-weight:bold;}
 #nav li.active a {background:#5388B4;color:#fff;}
 #nav li a:hover, #nav li:hover a, #nav li.sfHover a {background:#5388B4;color:#fff;text-decoration:none;}
 #nav li ul {position:absolute;width:170px;left:-999em;margin-left:-1px;border:1px solid #295770;border-top:0;}
@@ -97,7 +99,7 @@ a.readon2 span {background:url(../images/kunena.png) 0 -344px;display:block;marg
 .breadcrumbs-pad {padding:0 1px;}
 div.breadcrumbs {background:url(../images/kunena.png) 0 -68px repeat-x;border-bottom:1px solid #e6e6e6;font-size:110%;font-weight:bold;margin:0;padding:7px 15px 5px;color:#777;border-top:1px solid #d9d9d9;}
 div.breadcrumbs .sep {padding:0 5px;}
-.component-pad {padding:0 15px 15px;}
+.component-pad {padding:15px;}
 .banneritem_text {margin-bottom:10px;}
 #modlgn_username, #modlgn_passwd {border:1px solid #ccc;padding:3px;}
 .pagination span, .pagination a {margin-right:5px;}
@@ -255,3 +257,68 @@ font-size:11px;
 	font-size: 100%;
 	margin: 0;
 }
+
+.contentpaneopen_edit {
+	width: 30px;
+	float: right;
+	height: 30px;
+	padding: 0;
+	margin: 0;
+}
+
+/* Finder styles */
+#search-form form { text-align:left !important; }
+#search-form { margin-top: 30px; }
+
+/* Download page */
+.tableheader { 
+	text-align:left;
+	font-weight: bold;
+}
+.vmiddle {
+	vertical-align: middle;
+	text-align:left;
+}
+p.lang {
+	font-size: 11px;
+	margin-right: 20px;
+	line-height: 15px;
+	margin-top: 0;
+}
+p.dlformats {
+	font-size: 12px;
+	font-weight: bold;
+}
+hr.subtle {
+	border: 0;
+	color: #ddd;
+	background-color: #ddd;
+	width: 100%;
+	height: 1px;
+	text-align:left;
+	margin: 15px 0;
+}
+table.dltable {
+	width: 100%;
+	border-collapse: collapse;
+	border: 0 none;
+}
+table.dltable td {
+	vertical-align: top;
+}
+
+/* Team page */
+
+.headshot {
+	margin: 0px 15px 10px 0px; 
+	float: left;
+}
+p.clr { clear: both;}
+
+/* Home page modules */
+.number-block1,
+.number-block2,
+.number-block3 { margin-left: 10px; font-size: 12px;}
+
+
+
